--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Basic Reset and Layout */
 * {
   box-sizing: border-box; /* Makes padding/margin behave predictably */
   margin: 0;
@@ -21,7 +20,7 @@ body {
   
 }
 
-h2, h3, h4{
+h2, h3{
     color: white;
 }
 
@@ -33,7 +32,7 @@ h2, h3, h4{
 /* "Hello!" fade in/out animation */
 .hello-text {
   font-size: 5em;
-  animation: fadeInOut 4s ease-in-out forwards;
+  animation: fadeInOut 3s ease-in-out forwards;
 }
 
 /* Typewriter effect */
@@ -48,8 +47,8 @@ h2, h3, h4{
 }
 .typewriter:not(.hidden) {
   opacity: 1;
-  animation: typing 3s steps(13, end) forwards,
-             blink-cursor 0.7s step-end 4.5s 4, /* blink 4x during 3s typing + 1.5s pause */
+  animation: typing 2.5s steps(13, end) forwards,
+             blink-cursor 0.7s step-end 4s 4, /* blink 4x during 3s typing + 1.5s pause */
              deleting 2.5s steps(13, end) forwards 4.5s; /* Start delete after 3s + 1.5s */
   white-space: nowrap;
   overflow: hidden;
@@ -96,7 +95,7 @@ h2, h3, h4{
 
 .typewriter2:not(.hidden) {
   opacity: 1;
-  animation: typing2 2.5s steps(7, end), forwards;
+  animation: typing2 2s steps(7, end), forwards;
   white-space: nowrap;
   overflow: hidden;
   border-right: 2px solid rgb(255, 255, 255); /* Simulated cursor */
@@ -107,18 +106,37 @@ h2, h3, h4{
   to { width: 7ch; }
 }
 
+.auto_type {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 4em;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 2px solid rgb(255, 167, 3);
+  color: rgb(255, 167, 3);
+}
+
+
 #learn-more-btn {
   opacity: 0;
   transition: opacity 1s ease;
   font-size: 1.5em;
   position: absolute;
-  top: 60%;
+  top: 50%;
   left: 50%;
   transform: translateX(-50%);
   text-decoration: none;
   padding: 10px 20px;
-  background-color: rgb(231, 155, 15);
+  background-color: rgb(255, 167, 3);
   color: white;
-  border-radius: 8px;
-  pointer-events: none; /* Prevents clicking while hidden */
+  border-radius: 9px;
+  box-shadow: inset 0 0 0 0 rgb(255, 243, 225);
+}
+
+#learn-more-btn:hover{
+    background-color: beige;
+    cursor: pointer;
+    color: black;
 }
