--- a/style.css
+++ b/style.css
@@ -145,13 +145,11 @@ h2, h3{
 @media screen and (max-width: 480px) and (orientation: portrait) {
   h1 {
     font-size: 2.5rem; 
+    top: 50%;
   }
 
-  h2, h3,{
+  .typewriter, .typewriter2, .auto_type{
     font-size: 1.35rem;
-  }
-  .auto_type {
-    font-size: 1.5rem;
   }
 
   #learn-more-btn {
